enable creation to also start the target server